syntax="proto2";
package perfuse;

option java_package = "chunkserver";
option java_outer_classname = "DefinesProto";

enum MethodType {
    GETFILEINFO = 0;
    GETCHUNKDATA = 1;
    GETHASHES = 2;
    WRITECHUNK = 3;
    NOP = 4;
    VIVALDIUPDATE = 5;
    GETDIRLIST = 6;
    WRITEHASHES = 7;
    UPDATEFILEINFO = 8;
}

message FileInfo {
    required string filename = 1;
    required int32 size = 2;
    required string lastmodified = 3;
    required bool is_dir = 4;
    required string parent = 5;
}

message Empty {
}

message NodeInfo {
	required string ip = 1;
	optional int32 port = 2 [default = 50004];
	optional int32 vivaldimetric = 3;
}

message ChunkInfo {
    required string hash = 1;
    required string filename = 2;
    required int32 offset = 3;
    required int32 len = 4;
    repeated NodeInfo seeders = 5;
}

message ChunkReq {
	required string old_hash = 1;
	required ChunkInfo new_chunk = 2;
}

message Error {
	required int32 ec = 1 [default = 0];
}

//Storage Server specific Messages

message ChunkData {
	required string data = 1;                                                                  
}

//Contains CHunk information and data
message ChunkInfoData {
	required ChunkInfo chunkinfo = 1;
	required ChunkData chunkdata = 2;
}

message Capacity {
	required int32 maxcap = 1;
	required int32 curcap = 2;
}

